--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+live-installer-3 (2016.06.16) debian; urgency=low
+
+  * Fix Firefox/Thunderbird localization issues
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Thu, 16 Jun 2016 10:50:45 +0200
+
 live-installer-3 (2016.06.13) debian; urgency=low
 
   * User defined mount points
